# Flickercladding

./: .gitignore  2touchdown.txt  2touchup.txt  4touchleft.txt  4touchright.txt  CMakeLists.txt  DeployDataToDevice.bat  LICENSE  README.md  RetrieveDataFromDevice.bat  android_build.sh  build.gradle  deploydata.sh  deploydatatodevice.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/flickercladding/: FlickercladdingActivity.java  FlickercladdingLib.java  FlickercladdingView.java
app/src/main/jni/: DataDirectoryLocation.h  jni_to_cpp.cpp
app/src/main/jni/GLUtil/: BMFont_structs.h  FontMgr.cpp  FontMgr.h  FontRenderer.cpp  FontRenderer.h  GL_Includes.h  MatrixMath.cpp  MatrixMath.h  Renderer.h  ShaderFunctions.cpp  ShaderFunctions.h  ShaderMgr.h  ShaderWithVariables.cpp  ShaderWithVariables.h  TextureFunctions.cpp  TextureFunctions.h  VectorMath.cpp  VectorMath.h  vector_make_helpers.h  vectortypes.h
app/src/main/jni/Scene/: IScene.h  LineObj.cpp  LineObj.h  LuajitScene.cpp  LuajitScene.h  Scene.cpp  Scene.h  SimpleIcon.cpp  SimpleIcon.h  TabletWindow.cpp  TabletWindow.h  TouchPoints.cpp  TouchPoints.h  cpp_interface.cpp  cpp_interface.h
app/src/main/jni/Util/: AndroidTouchEnums.h  LanguageEnums.h  Logging.h  Singleton.h  StringFunctions.cpp  StringFunctions.h  Timer.cpp  Timer.h  shader_utils.cpp  shader_utils.h
app/src/main/res/values/: strings.xml
data/: 3dcube1.raw
data/fonts/: SegoeUI_10px.fnt  SegoeUI_13px.fnt  SegoeUI_13px.kern  SegoeUI_18px.fnt  SegoeUI_18px.kern  SegoeUI_24px.kern  SegoeUI_24px_0.raw  SegoeUI_24px_1.raw  courier_512_0.raw  papyrus_512.fnt  papyrus_512_0.raw
data/lua/: bass.lua  loremipsumbreaks.txt  luaentry.lua  negz_128.raw  posy_128.raw  segoe_ui128.fnt  segoe_ui128_0.raw
data/lua/effect/: edge_effect.lua  edge_highlight.lua  effect_chain.lua  single_pass_filters.lua
data/lua/scene/: clockface.lua  colorcube.lua  colorquad.lua  colortri.lua  cubescene2.lua  fbo_scene.lua  floorquad.lua  fonttest_scene.lua  fullscreen_quad.lua  gridcube_scene.lua  hybrid_scene.lua  moon_scene3.lua  shadertoy_scene2.lua  stringedit_scene.lua  textured_cubes.lua  touch_shader.lua  touch_shader2.lua  touchtris.lua  tunnel_vert.lua  vsfsquad.lua  vsfstri.lua
data/lua/scene2/: frustum.lua  julia_set.lua  moon.lua  multipass_example.lua  origin.lua  simple_game.lua
data/lua/util/: bmfont.lua  camera.lua  cubemapfunctions.lua  cubemesh.lua  fbofunctions.lua  fontfunctions.lua  fullscreen_quad.lua  fullscreen_shader.lua  glfont.lua  glfw_keycodes.lua  matrixmath.lua  objfile.lua  sdfmesh.lua  shaderfunctions.lua  slideshow.lua
deploy/data/images/: negx_128.raw  negy_128.raw  posz_128.raw
deploy/data/shaders/: sh1.glsl  sh2.glsl
deploy/fonts/: SegoeUI_10px_0.raw  SegoeUI_13px_0.raw  SegoeUI_18px_0.raw  SegoeUI_24px.fnt  courier_512.fnt
deploy/lua/: flickercladding_scenebridge.lua  luaentry.lua  opengles3.lua  posx_128.raw  stone_128x128.raw
deploy/lua/effect/: effect_chain.lua  iir_effect.lua  onepassblur_effect.lua  single_pass_filters.lua
deploy/lua/effect2/: clut_effect.lua  custom_effect.lua  effect_chain.lua  iir_effect.lua  simple_effect.lua
deploy/lua/scene/: attrlesstri.lua  clockface.lua  colorcube.lua  compute_image.lua  cubemap.lua  droid.lua  eyetest.lua  font_test.lua  fonttest_scene.lua  hybrid_scene.lua  key_check.lua  molecule.lua  moon.lua  multipass_example.lua  nbody07.lua  pointsvs_editor.lua  postprocessingslides_scene.lua  raymarch_csg.lua  shadertoy_editor.lua  shadertoy_scene2.lua  simple_game.lua  stringedit_scene.lua  textured_cubes.lua  touch_shader2.lua  tunnel_frag.lua  vsfstri.lua
deploy/lua/scene2/: clockface.lua  cubemap.lua  droid.lua  gridcube.lua  hybrid_scene.lua  molecule.lua  simple_game.lua  textured_cubes.lua  vsfstri.lua
deploy/lua/scene_old/: cubemap_scene.lua  frustum.lua  tunnel_vert.lua  vsfstri.lua
deploy/lua/util/: bmfont.lua  camera.lua  editbuffer.lua  fbofunctions.lua  filter.lua  fullscreen_shader.lua  geometry_functions.lua  glfont.lua  glfw_keycodes.lua  lineobj.lua  obj.lua  shaderfunctions2.lua  shell_hacks.lua  slideshow.lua  soundfx.lua
desktop_src/: glfw_main.cpp  sdl_main.cpp
desktop_src/Desktop_Utils/: DebugOutput.cpp  DebugOutput.h  Logger.cpp  Logger.h  TouchReplayer.cpp  TouchReplayer.h  WindowsFunctions.cpp  WindowsFunctions.h
desktop_src/GL/include/glad/: glad.h
desktop_src/GL/src/: glad.c
gradle/wrapper/: gradle-wrapper.properties
shaders/: basic.frag  basic.vert  basicline.frag  basicline.vert  basicplane.frag  basicplane.vert  basictex.frag  basictex.vert  fontrenderer.frag  fontrenderer.vert
tools/: ExtractKeycodes.py  RenameProject.py  hardcode_shaders.py
